RESOLVED FIXED20819
JSValue::isObject() is slow
https://bugs.webkit.org/show_bug.cgi?id=20819
Summary JSValue::isObject() is slow
Cameron Zwarich (cpst)
Reported 2008-09-12 17:40:25 PDT
JSValue::isObject() shows up as 2.4% of the Shark profile for the V8 Earley-Boyer benchmark. The recent changes to property access should make this easier to implement efficiently. I am assigning this to myself.
Attachments
Patch that is a slowdown, but shouldn't be (3.35 KB, patch)
2008-09-12 19:37 PDT, Cameron Zwarich (cpst)
no flags
Proposed patch (5.69 KB, patch)
2008-09-12 21:31 PDT, Cameron Zwarich (cpst)
mjs: review+
Cameron Zwarich (cpst)
Comment 1 2008-09-12 19:37:34 PDT
Created attachment 23386 [details] Patch that is a slowdown, but shouldn't be This is a 0.7% speedup on SunSpider, but it is a regression on V8, including a small regression on Earley-Boyer and a large 6.4% regression on Richards. I don't really know what's up with this.
Cameron Zwarich (cpst)
Comment 2 2008-09-12 21:31:46 PDT
Created attachment 23388 [details] Proposed patch This patch that also does the same thing for JSCell::isString() is a 0.7% speedup on SunSpider and a 1.0% speedup on the V8 benchmark suite.
Maciej Stachowiak
Comment 3 2008-09-12 21:32:54 PDT
Comment on attachment 23388 [details] Proposed patch r=me
Cameron Zwarich (cpst)
Comment 4 2008-09-12 21:58:00 PDT
Landed in r36368.
Note You need to log in before you can comment on or make changes to this bug.