JavaScriptCore/kjs/JSCell.h
@@ -46,9 +46,9 @@ namespace JSC {
     public:
         // Querying the type.
         bool isNumber() const;
-        virtual bool isString() const;
+        bool isString() const;
+        bool isObject() const;
         virtual bool isGetterSetter() const;
-        virtual bool isObject() const;
         virtual bool isObject(const ClassInfo*) const;
 
         StructureID* structureID() const;
@@ -119,6 +119,16 @@ namespace JSC {
     inline bool JSCell::isNumber() const
     {
         return Heap::isNumber(const_cast<JSCell*>(this));
+    }
+
+    inline bool JSCell::isObject() const
+    {
+        return m_structureID->type() == ObjectType;
+    }
+
+    inline bool JSCell::isString() const
+    {
+        return m_structureID->type() == StringType;
     }
 
     inline StructureID* JSCell::structureID() const
