JavaScriptCore/kjs/JSObject.cpp
@@ -521,11 +521,6 @@ StructureID* JSObject::createInheritorID()
     return m_inheritorID.get();
 }
 
-bool JSObject::isObject() const
-{
-    return true;
-}
-
 void JSObject::allocatePropertyStorage(size_t oldSize, size_t newSize)
 {
     JSValue** oldPropertStorage = m_propertyStorage;
